--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,16 @@
             android:text="倒计时"
             android:countDownStatus="@{mainVm.countDownStatus}"
             android:layout_height="wrap_content"/>
+        <Button
+            android:onClick="@{()->mainVm.skipList()}"
+            android:layout_width="match_parent"
+            android:text="跳转List界面"
+            android:layout_height="wrap_content"/>
+        <Button
+            android:onClick="@{()->mainVm.skipMultipleList()}"
+            android:layout_width="match_parent"
+            android:text="跳转多List界面"
+            android:layout_height="wrap_content"/>
 
         <TextView
             android:layout_width="wrap_content"
