--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,11 @@
             android:layout_width="match_parent"
             android:text="跳转多List界面"
             android:layout_height="wrap_content"/>
+        <Button
+            android:onClick="@{()->mainVm.skipCommonList()}"
+            android:layout_width="match_parent"
+            android:text="普通的List界面"
+            android:layout_height="wrap_content"/>
 
         <TextView
             android:layout_width="wrap_content"
