--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,12 @@
             android:layout_width="match_parent"
             android:text="普通的List界面"
             android:layout_height="wrap_content"/>
+        <ImageView
+            android:id="@+id/img"
+            android:layout_width="100dp"
+            app:imageUrl='@{"11"}'
+            android:transitionName="image"
+            android:layout_height="100dp"/>
 
         <TextView
             android:layout_width="wrap_content"
