--- a/app/src/main/res/layout/item_layout2.xml
+++ b/app/src/main/res/layout/item_layout2.xml
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
+            android:transitionName="image"
             android:layout_width="100dp"
             android:src="@color/colorAccent"
             app:imageUrl="@{checkBean.url}"
