--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,20 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:listDivider">@color/colorAccent</item>
     </style>
-
+    <!--dialog背景半透明-->
+    <style name="half_trans_Dialog" parent="android:style/Theme.Dialog">
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFrame">@null</item><!--边框-->
+        <item name="android:windowIsFloating">true</item><!--是否浮现在activity之上-->
+    </style>
+    <!--背景透明dialog-->
+    <style name="trans_Dialog" parent="half_trans_Dialog">
+        <item name="android:backgroundDimEnabled">false</item><!--背景变暗-->
+    </style>
+    <style name="anim_bottom_dialog">
+        <item name="android:windowEnterAnimation">@anim/slide_in_bottom</item>
+        <item name="android:windowExitAnimation">@anim/slide_out_bottom</item>
+    </style>
 </resources>
