--- a/app/src/main/res/layout/activity_behavior2.xml
+++ b/app/src/main/res/layout/activity_behavior2.xml
@@ -14,21 +14,48 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.behavior.BehaviorActivity">
+        <TextView
+            app:layout_behavior=".ui.behavior.MyBehavior4"
+            android:layout_width="match_parent"
+            android:background="@color/colorAccent"
+            android:layout_height="200dp"/>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv"
             android:layout_width="match_parent"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:dataList="@{uiVm.list}"
             app:adapter="@{uiVm.itemAdapter}"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            app:layout_behavior=".ui.behavior.MyBehavior5"
             android:layout_height="match_parent"/>
 
         <Button
+            android:visibility="visible"
+            android:layout_marginTop="100dp"
+            android:layout_gravity="bottom|right"
+            android:layout_marginBottom="150dp"
             android:id="@+id/btn"
             android:layout_width="wrap_content"
             android:text="11111"
             app:layout_behavior=".ui.behavior.MyBehavior2"
             android:layout_height="wrap_content"/>
+
+        <LinearLayout
+            android:visibility="visible"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_gravity="bottom"
+            android:background="@android:color/holo_red_light"
+            android:gravity="center"
+            app:layout_behavior=".ui.behavior.MyBehavior2">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="自定义Behavior"
+                android:textColor="@android:color/white"
+                android:textSize="20sp" />
+        </LinearLayout>
 
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
