--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -11,8 +11,9 @@
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <Button
+            android:visibility="gone"
             android:onClick="@{mainVm.listener}"
             android:layout_width="match_parent"
             android:text="我是ACTIVITY,点击我把请求数据给Fragment"
