--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,10 +48,10 @@
             android:layout_height="wrap_content"/>
         <ImageView
             android:id="@+id/img"
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             app:imageUrl='@{"11"}'
             android:transitionName="image"
-            android:layout_height="100dp"/>
+            android:layout_height="wrap_content"/>
 
         <TextView
             android:layout_width="wrap_content"
