--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="font1">30sp</dimen>
     <dimen name="font2">30dp</dimen>
+    <dimen name="font3">100dp</dimen>
 </resources>
