连线 绘图交互demo

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,14 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:listDivider">@color/colorAccent</item>
     </style>
+    <style name="AppFullTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="android:windowFullscreen">true</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:listDivider">@color/colorAccent</item>
+    </style>
     <!--dialog背景半透明-->
     <style name="half_trans_Dialog" parent="android:style/Theme.Dialog">
         <item name="android:background">@android:color/transparent</item>
