--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="font1">30sp</dimen>
     <dimen name="font2">30dp</dimen>
     <dimen name="font3">100dp</dimen>
+    <dimen name="dp1">1dp</dimen>
 </resources>
