--- a/app/src/main/res/layout/activity_action.xml
+++ b/app/src/main/res/layout/activity_action.xml
@@ -5,91 +5,121 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:background="#FFFFFF"
     tools:context=".ui.ActionActivity">
+    <com.example.dawnmvvm.view.PaintLayout
+        android:visibility="gone"
+        android:id="@+id/paint_ll"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 
     <com.example.dawnmvvm.view.PaintView
         android:id="@+id/paint_img"
         android:layout_width="0dp"
-        android:layout_weight="1"
+        android:visibility="gone"
+        android:layout_height="match_parent"
+        android:layout_weight="2" />
+    <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/color_ll"
+        android:layout_width="0dp"
+        android:layout_weight="2"
+        android:orientation="vertical"
         android:layout_height="match_parent"/>
+
     <com.example.dawnmvvm.bean.Doodle
 
         android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:visibility="gone"
-        android:layout_height="match_parent" />
+        android:visibility="gone" />
+
     <RelativeLayout
+        android:visibility="gone"
         android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60dp"
+            android:layout_marginEnd="10dp"
+            android:text="左边空白处是画画区域,请画出这条鱼吧" />
+
         <ImageView
-            android:visibility="visible"
             android:id="@+id/show_img"
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:src="@mipmap/finsh6"
-            android:layout_height="match_parent"/>
+            android:visibility="visible" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:onClick="selectColor"
-                android:layout_width="wrap_content"
-                android:text="颜色"
-                android:layout_height="wrap_content"/>
+                android:text="颜色" />
+
             <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:onClick="paintBig"
-                android:layout_width="wrap_content"
-                android:text="变粗"
-                android:layout_height="wrap_content"/>
+                android:text="变粗" />
+
             <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:onClick="clear"
-                android:layout_width="wrap_content"
-                android:text="橡皮"
-                android:layout_height="wrap_content"/>
+                android:text="橡皮" />
+
             <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:onClick="score"
-                android:layout_width="wrap_content"
-                android:text="得分"
-                android:layout_height="wrap_content"/>
+                android:text="得分" />
         </LinearLayout>
 
     </RelativeLayout>
 
     <com.example.dawnmvvm.view.HookView
-        android:visibility="gone"
         android:layout_width="100dp"
-        android:layout_height="100dp"/>
+        android:layout_height="100dp"
+        android:visibility="gone" />
+
     <com.example.dawnmvvm.view.ConnectionLineLayout
-        android:visibility="gone"
-        android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:visibility="visible">
 
 
-<!--       <LinearLayout-->
-<!--           android:orientation="vertical"-->
-<!--           android:id="@+id/showListLl"-->
-<!--           android:background="@color/colorPrimary"-->
-<!--           android:layout_width="100dp"-->
-<!--           android:layout_height="match_parent">-->
+        <!--       <LinearLayout-->
+        <!--           android:orientation="vertical"-->
+        <!--           android:id="@+id/showListLl"-->
+        <!--           android:background="@color/colorPrimary"-->
+        <!--           android:layout_width="100dp"-->
+        <!--           android:layout_height="match_parent">-->
 
 
+        <!--       </LinearLayout>-->
+        <!--       <LinearLayout-->
+        <!--           android:orientation="vertical"-->
+        <!--           android:id="@+id/answerListLl"-->
+        <!--           android:layout_alignParentEnd="true"-->
+        <!--           android:background="@color/colorPrimary"-->
+        <!--           android:layout_width="100dp"-->
+        <!--           android:layout_height="match_parent">-->
 
 
-<!--       </LinearLayout>-->
-<!--       <LinearLayout-->
-<!--           android:orientation="vertical"-->
-<!--           android:id="@+id/answerListLl"-->
-<!--           android:layout_alignParentEnd="true"-->
-<!--           android:background="@color/colorPrimary"-->
-<!--           android:layout_width="100dp"-->
-<!--           android:layout_height="match_parent">-->
-
-
-
-
-<!--       </LinearLayout>-->
+        <!--       </LinearLayout>-->
 
 
     </com.example.dawnmvvm.view.ConnectionLineLayout>
