--- a/app/src/main/res/layout/activity_doodle.xml
+++ b/app/src/main/res/layout/activity_doodle.xml
@@ -3,61 +3,105 @@
     xmlns:pushtouch="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:background="#88000000"
+    android:orientation="vertical">
 
-    <com.example.dawnmvvm.bean.Doodle
-        android:id="@+id/doodle_surfaceview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/start_Ll"
+        android:layout_width="80dp"
+        android:layout_height="100dp"
+        android:layout_centerInParent="true">
 
-    <LinearLayout
-        android:layout_alignParentBottom="true"
-        android:id="@+id/bottom_layout"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_gravity="bottom"
-        android:background="@android:color/darker_gray"
-        android:orientation="horizontal" >
+        <com.example.dawnmvvm.view.FlashStartView
+            android:id="@+id/flashView0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_marginStart="10dp"
+            pushtouch:layout_constraintCircle="@+id/start_iv"
+            pushtouch:layout_constraintCircleAngle="50"
+            pushtouch:layout_constraintCircleRadius="20dp" />
+        <com.example.dawnmvvm.view.FlashStartView
+            android:id="@+id/flashView1"
+            android:layout_width="13dp"
+            android:layout_height="13dp"
+            android:layout_gravity="top"
+            android:layout_marginStart="10dp"
+            pushtouch:layout_constraintCircle="@+id/start_iv"
+            pushtouch:layout_constraintCircleAngle="110"
+            pushtouch:layout_constraintCircleRadius="20dp" />
+        <com.example.dawnmvvm.view.FlashStartView
+            android:id="@+id/flashView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_marginStart="10dp"
+            pushtouch:layout_constraintCircle="@+id/start_iv"
+            pushtouch:layout_constraintCircleAngle="180"
+            pushtouch:layout_constraintCircleRadius="20dp" />
+        <com.example.dawnmvvm.view.FlashStartView
+            android:id="@+id/flashView3"
+            android:layout_width="13dp"
+            android:layout_height="13dp"
+            android:layout_gravity="top"
+            android:layout_marginStart="10dp"
+            pushtouch:layout_constraintCircle="@+id/start_iv"
+            pushtouch:layout_constraintCircleAngle="250"
+            pushtouch:layout_constraintCircleRadius="20dp" />
+        <com.example.dawnmvvm.view.FlashStartView
+            android:id="@+id/flashView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_marginStart="10dp"
+            pushtouch:layout_constraintCircle="@+id/start_iv"
+            pushtouch:layout_constraintCircleAngle="320"
+            pushtouch:layout_constraintCircleRadius="20dp" />
+        <!--        <com.example.dawnmvvm.view.FlashStartView-->
+        <!--            android:layout_marginEnd="10dp"-->
+        <!--            android:id="@+id/flashView1"-->
+        <!--            android:layout_gravity="end"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"/>-->
+        <!--        <com.example.dawnmvvm.view.FlashStartView-->
+        <!--            android:id="@+id/flashView2"-->
+        <!--            android:layout_marginTop="60dp"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"/>-->
+        <!--        <com.example.dawnmvvm.view.FlashStartView-->
+        <!--            android:id="@+id/flashView3"-->
+        <!--            android:layout_marginTop="60dp"-->
+        <!--            android:layout_gravity="end"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"/>-->
+        <!--        <com.example.dawnmvvm.view.FlashStartView-->
+        <!--            android:id="@+id/flashView4"-->
+        <!--            android:layout_marginStart="40dp"-->
+        <!--            android:layout_gravity="bottom"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"/>-->
 
-        <Button
-            android:id="@+id/color_picker"
-            android:layout_width="0dp"
+
+        <ImageView
+            android:id="@+id/start_iv"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="@null"
-            android:gravity="center"
-            android:text="颜色" />
+            android:src="@mipmap/img_score_start"
+            pushtouch:layout_constraintBottom_toBottomOf="parent"
+            pushtouch:layout_constraintEnd_toEndOf="parent"
+            pushtouch:layout_constraintStart_toStartOf="parent"
+            pushtouch:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/paint_picker"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+        <com.example.dawnmvvm.view.HookView
+            android:layout_width="14dp"
+            android:layout_height="7dp"
             android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="@null"
-            android:gravity="center"
-            android:text="画笔" />
+            pushtouch:layout_constraintBottom_toBottomOf="parent"
+            pushtouch:layout_constraintEnd_toEndOf="parent"
+            pushtouch:layout_constraintStart_toStartOf="parent"
+            pushtouch:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/eraser_picker"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="@null"
-            android:gravity="center"
-            android:text="橡皮" />
-
-        <Button
-            android:id="@+id/shape_picker"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="@null"
-            android:gravity="center"
-            android:text="形状" />
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
